@@ -142,8 +142,9 @@ public final class StringUtils {
 	 * {@code Arrays#toString(...)} variant will be used to convert it to a String.</li>
 	 * <li>If the supplied object is an object array, {@code Arrays#deepToString(Object[])}
 	 * will be used to convert it to a String.</li>
-	 * <li>Otherwise, the result of invoking {@code toString()} on the object
-	 * will be returned.</li>
+	 * <li>Otherwise, {@code toString()} will be invoked on the object. If the
+	 * result is non-null, that result will be returned. If the result is
+	 * {@code null}, {@code "null"} will be returned.</li>
 	 * <li>If any of the above results in an exception, this method delegates to
 	 * {@link #defaultToString(Object)}</li>
 	 * </ul>
@@ -190,7 +191,8 @@ public final class StringUtils {
 			}
 
 			// else
-			return obj.toString();
+			String result = obj.toString();
+			return result != null ? result : "null";
 		}
 		catch (Throwable throwable) {
 			UnrecoverableExceptions.rethrowIfUnrecoverable(throwable);
